--- a/styles/style.css
+++ b/styles/style.css
@@ -9,3 +9,18 @@
 p {
     text-align: center;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.navbar-light {
+    background-color: #d8e2dc;
+}
+
+.bg-light {
+    background-color: #fbf6ef !important;
+}
