--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,25 @@ p {
     font-size: xx-large;
 }
 
-#taskDate, #taskCity, #taskLoc, #details {
+#taskDate,
+#taskCity,
+#taskLoc,
+#details {
     text-align: left;
 }
+
+/* .design {
+    background: #e0e0e0;
+    box-shadow: -15px 15px 30px #c1c1c1,
+        15px -15px 30px #ffffff;
+} */
+
+/* .list-group {
+    border-radius: 50px;
+} */
+
+/* #taskCardGroup {
+    display: flex;
+    flex-flow: column wrap;
+    flex: 200px;
+} */
