--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -13,18 +13,19 @@ body {
   -------------------------------------------------- */
   
   /* Carousel base class */
-  .carousel {
+  /* .carousel {
     margin-bottom: 4rem;
-  }
+  } */
+
   /* Since positioning the image, we need to help out the caption */
   .carousel-caption {
-    bottom: 3rem;
+    top: 3rem;
     z-index: 10;
   }
   
   /* Declare heights because of positioning of img element */
   .carousel-item {
-    height: 50rem;
+    height: 45rem;
   }
   .carousel-item > img {
     position: absolute;
@@ -33,8 +34,14 @@ body {
     min-width: 100%;
     height: 32rem;
   }
+
+  .carousel-caption h1 {
+    text-align: center;
+    
+  }
   
   
+   
   /* MARKETING CONTENT
   -------------------------------------------------- */
   
